--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "flask-service"
+name = "fastapi-service"
 version = "0.1.0"
 description = ""
 authors = [
@@ -8,14 +8,15 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "flask (>=3.0.0,<4.0.0)",
-    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
+    "fastapi (>=0.115.0,<1.0.0)",
+    "uvicorn[standard] (>=0.32.0,<1.0.0)",
     "sqlalchemy (>=2.0.43,<3.0.0)",
     "psycopg2-binary (>=2.9.9,<3.0.0)",
     "alembic (>=1.16.4,<2.0.0)",
     "pydantic (>=2.10.1,<3.0.0)",
     "pytest (>=8.4.1,<9.0.0)",
-    "pytest-flask (>=1.3.0,<2.0.0)",
+    "pytest-asyncio (>=0.24.0,<1.0.0)",
+    "httpx (>=0.27.0,<1.0.0)",
     "click (>=8.2.1,<9.0.0)",
     "black (>=25.1.0,<26.0.0)",
     "python-dotenv (>=1.2.1,<2.0.0)"
