--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,48 +1,59 @@
-name: Deploy Flask Application
+name: Tests
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main, master, develop ]
   pull_request:
-    branches: [ main ]
+    branches: [ main, master, develop ]
 
 jobs:
   test:
     runs-on: ubuntu-latest
-    
+    strategy:
+      matrix:
+        service: [todo, shorturl]
+      fail-fast: false
+
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-      
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.12'
-      
-      - name: Install Poetry
-        uses: snok/install-poetry@v1
-        with:
-          version: latest
-          virtualenvs-create: true
-          virtualenvs-in-project: true
-      
-      - name: Load cached venv
-        id: cached-poetry-dependencies
-        uses: actions/cache@v3
-        with:
-          path: .venv
-          key: venv-${{ runner.os }}-${{ hashFiles('**/poetry.lock') }}
-      
-      - name: Install dependencies
-        if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
-        run: poetry install --no-interaction --no-ansi
-      
-      - name: Install dependencies
-        if: steps.cached-poetry-dependencies.outputs.cache-hit == 'true'
-        run: poetry install --no-interaction --no-ansi --no-root
-      
-      - name: Run tests
-        run: poetry run pytest app/tests/ -v
-        env:
-          SQLALCHEMY_DATABASE_URI: 'sqlite:///:memory:'
-          TESTING: 'true'
+    - uses: actions/checkout@v4
+
+    - name: Set up Python
+      uses: actions/setup-python@v5
+      id: setup-python
+      with:
+        python-version: '3.12'
+
+    - name: Install Poetry
+      uses: snok/install-poetry@v1
+      with:
+        version: latest
+        virtualenvs-create: true
+        virtualenvs-in-project: true
+        installer-parallel: true
+
+    - name: Load cached venv
+      id: cached-poetry-dependencies
+      uses: actions/cache@v4
+      with:
+        path: .venv
+        key: venv-${{ runner.os }}-${{ steps.setup-python.outputs.python-version }}-${{ hashFiles('**/poetry.lock') }}
+
+    - name: Install dependencies
+      if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
+      run: poetry install --no-interaction --no-ansi
+
+    - name: Install dependencies (cached)
+      if: steps.cached-poetry-dependencies.outputs.cache-hit == 'true'
+      run: poetry install --no-interaction --no-ansi --no-root
+
+    - name: Create data directory
+      working-directory: services/${{ matrix.service }}
+      run: mkdir -p data
+
+    - name: Run tests for ${{ matrix.service }} service
+      working-directory: services/${{ matrix.service }}
+      env:
+        DATABASE_URL: sqlite:///./data/${{ matrix.service }}.db
+        PYTHONPATH: ${{ github.workspace }}/services/${{ matrix.service }}
+      run: poetry run pytest tests/ -v --tb=short
+
